# ToothSegmentation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  repairOBJFile.hpp
